install/kubernetes/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v1
  namespace: pdm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: product
        version: v1
    spec:
      containers:
      - name: product
        image: rondochen/product:1.0
        imagePullPolicy: Always
        command:
          - java
          - -Xmx400m
          - -jar
          - /app/product.jar
        ports:
        - containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz/ready
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 1000m
            memory: 2048Mi
          requests:
            cpu: 250m
            memory: 512Mi
