install/kubernetes/order.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: xyz
spec:
  ports:
    - name: http-order
      port: 7000
  selector:
    app: order

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: xyz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: rondochen/order:1.0
        imagePullPolicy: Always
        command:
          - sh
          - -c
          - |
            ConnectionStrings__OrderMySql="server=${DB_HOST};user=${DB_USERNAME};password=${DB_PASSWORD};database=${DB_DATABASE};old guids=true" \
            Providers__product=${SERVICE_PRODUCT} \
            Providers__passport=${SERVICE_PASSPORT} \
            ./order
        livenessProbe:
          httpGet:
            path: /healthz/ready
            port: 7000
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 7000
          initialDelaySeconds: 3
          periodSeconds: 10
        ports:
        - containerPort: 7000
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 128Mi
