install/kubernetes/passport.yaml
apiVersion: v1
kind: Service
metadata:
  name: passport
  namespace: xyz
spec:
  ports:
    - name: http-passport
      port: 5000
  selector:
    app: passport

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport
  namespace: xyz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passport
  template:
    metadata:
      labels:
        app: passport
    spec:
      containers:
      - name: passport
        image: rondochen/passport:1.0
        imagePullPolicy: Always
        command:
          - node
          - index.js
        livenessProbe:
          httpGet:
            path: /healthz/ready
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 10
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 128Mi
