install/kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: db
spec:
  ports:
    - name: tcp-redis
      port: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: Always
        command:
          - sh 
          - -c
          - |
            redis-server --requirepass $REDIS_PASSWORD
        ports:
        - containerPort: 6379
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 128Mi
