install/kubernetes/review.yaml
apiVersion: v1
kind: Service
metadata:
  name: review
  namespace: pdm
spec:
  ports:
    - name: tcp-review
      port: 9000
  selector:
    app: review

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review
  namespace: pdm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
      - name: review
        image: rondochen/review:1.0
        imagePullPolicy: Always
        command:
          - sh
          - -c
          - |
            [...]
        ports:
        - containerPort: 9000
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 128Mi
