install/kubernetes/shopcart.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopcart
  namespace: xyz
spec:
  ports:
    - name: http-shopcart
      port: 6000
  selector:
    app: shopcart

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopcart
  namespace: xyz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopcart
  template:
    metadata:
      labels:
        app: shopcart
    spec:
      containers:
      - name: shopcart
        image: rondochen/shopcart:1.0
        imagePullPolicy: Always
        command: 
          - /app/main
        ports:
        - containerPort: 6000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 6000
          initialDelaySeconds: 1
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 6000
          initialDelaySeconds: 1
          periodSeconds: 10
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
